app/Pomona/Content/PomonaQueryJsParser.js
// $ANTLR 3.3 Nov 30, 2010 12:50:56 PomonaQueryJs.g 2013-05-03 11:58:56

var PomonaQueryJsParser = function(input, state) {
    if (!state) {
        state = new org.antlr.runtime.RecognizerSharedState();
    }

    (function(){
    }).call(this);

    PomonaQueryJsParser.superclass.constructor.call(this, input, state);

    this.dfa25 = new PomonaQueryJsParser.DFA25(this);

         

    /* @todo only create adaptor if output=AST */
    this.adaptor = new org.antlr.runtime.tree.CommonTreeAdaptor();

};

org.antlr.lang.augmentObject(PomonaQueryJsParser, {
    EOF: -1,
    T__37: 37,
    T__38: 38,
    T__39: 39,
    T__40: 40,
    T__41: 41,
    T__42: 42,
    T__43: 43,
    T__44: 44,
    T__45: 45,
    T__46: 46,
    T__47: 47,
    T__48: 48,
    T__49: 49,
    T__50: 50,
    T__51: 51,
    T__52: 52,
    T__53: 53,
    T__54: 54,
    T__55: 55,
    T__56: 56,
    T__57: 57,
    T__58: 58,
    T__59: 59,
    T__60: 60,
    T__61: 61,
    T__62: 62,
    T__63: 63,
    T__64: 64,
    T__65: 65,
    T__66: 66,
    T__67: 67,
    T__68: 68,
    T__69: 69,
    T__70: 70,
    T__71: 71,
    ROOT: 4,
    AND_OP: 5,
    OR_OP: 6,
    LT_OP: 7,
    GT_OP: 8,
    LE_OP: 9,
    GE_OP: 10,
    EQ_OP: 11,
    MUL_OP: 12,
    DIV_OP: 13,
    NE_OP: 14,
    ADD_OP: 15,
    SUB_OP: 16,
    MOD_OP: 17,
    DOT_OP: 18,
    AS_OP: 19,
    IN_OP: 20,
    NOT_OP: 21,
    DATETIME_LITERAL: 22,
    GUID_LITERAL: 23,
    METHOD_CALL: 24,
    INDEXER_ACCESS: 25,
    LAMBDA_OP: 26,
    ARRAY_LITERAL: 27,
    PREFIXED_STRING: 28,
    ID: 29,
    INT: 30,
    WS: 31,
    STRING: 32,
    HEX_DIGIT: 33,
    UNICODE_ESC: 34,
    OCTAL_ESC: 35,
    ESC_SEQ: 36
});

(function(){
// public class variables
var EOF= -1,
    T__37= 37,
    T__38= 38,
    T__39= 39,
    T__40= 40,
    T__41= 41,
    T__42= 42,
    T__43= 43,
    T__44= 44,
    T__45= 45,
    T__46= 46,
    T__47= 47,
    T__48= 48,
    T__49= 49,
    T__50= 50,
    T__51= 51,
    T__52= 52,
    T__53= 53,
    T__54= 54,
    T__55= 55,
    T__56= 56,
    T__57= 57,
    T__58= 58,
    T__59= 59,
    T__60= 60,
    T__61= 61,
    T__62= 62,
    T__63= 63,
    T__64= 64,
    T__65= 65,
    T__66= 66,
    T__67= 67,
    T__68= 68,
    T__69= 69,
    T__70= 70,
    T__71= 71,
    ROOT= 4,
    AND_OP= 5,
    OR_OP= 6,
    LT_OP= 7,
    GT_OP= 8,
    LE_OP= 9,
    GE_OP= 10,
    EQ_OP= 11,
    MUL_OP= 12,
    DIV_OP= 13,
    NE_OP= 14,
    ADD_OP= 15,
    SUB_OP= 16,
    MOD_OP= 17,
    DOT_OP= 18,
    AS_OP= 19,
    IN_OP= 20,
    NOT_OP= 21,
    DATETIME_LITERAL= 22,
    GUID_LITERAL= 23,
    METHOD_CALL= 24,
    INDEXER_ACCESS= 25,
    LAMBDA_OP= 26,
    ARRAY_LITERAL= 27,
    PREFIXED_STRING= 28,
    ID= 29,
    INT= 30,
    WS= 31,
    STRING= 32,
    HEX_DIGIT= 33,
    UNICODE_ESC= 34,
    OCTAL_ESC= 35,
    ESC_SEQ= 36;

// public instance methods/vars
org.antlr.lang.extend(PomonaQueryJsParser, org.antlr.runtime.Parser, {
        
    setTreeAdaptor: function(adaptor) {
        this.adaptor = adaptor;
    },
    getTreeAdaptor: function() {
        return this.adaptor;
    },

    getTokenNames: function() { return PomonaQueryJsParser.tokenNames; },
    getGrammarFileName: function() { return "PomonaQueryJs.g"; }
});
org.antlr.lang.augmentObject(PomonaQueryJsParser.prototype, {

    // inline static return class
    parse_return: (function() {
        PomonaQueryJsParser.parse_return = function(){};
        org.antlr.lang.extend(PomonaQueryJsParser.parse_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // PomonaQueryJs.g:66:8: public parse : exp EOF -> ^( ROOT exp ) ;
    // $ANTLR start "parse"
    parse: function() {
        var retval = new PomonaQueryJsParser.parse_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var EOF2 = null;
         var exp1 = null;

        var EOF2_tree=null;
        var stream_EOF=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token EOF");
        var stream_exp=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"rule exp");
        try {
            // PomonaQueryJs.g:67:2: ( exp EOF -> ^( ROOT exp ) )
            // PomonaQueryJs.g:67:4: exp EOF
            this.pushFollow(PomonaQueryJsParser.FOLLOW_exp_in_parse450);
            exp1=this.exp();

            this.state._fsp--;

            stream_exp.add(exp1.getTree());
            EOF2=this.match(this.input,EOF,PomonaQueryJsParser.FOLLOW_EOF_in_parse452);  
            stream_EOF.add(EOF2);



            // AST REWRITE
            // elements: exp
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            var stream_retval=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = this.adaptor.nil();
            // 67:12: -> ^( ROOT exp )
            {
                // PomonaQueryJs.g:67:15: ^( ROOT exp )
                {
                var root_1 = this.adaptor.nil();
                root_1 = this.adaptor.becomeRoot(this.adaptor.create(ROOT, "ROOT"), root_1);

                this.adaptor.addChild(root_1, stream_exp.nextTree());

                this.adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;


            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    exp_return: (function() {
        PomonaQueryJsParser.exp_return = function(){};
        org.antlr.lang.extend(PomonaQueryJsParser.exp_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // PomonaQueryJs.g:70:1: exp : as_expression ;
    // $ANTLR start "exp"
    exp: function() {
        var retval = new PomonaQueryJsParser.exp_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

         var as_expression3 = null;


        try {
            // PomonaQueryJs.g:71:2: ( as_expression )
            // PomonaQueryJs.g:71:4: as_expression
            root_0 = this.adaptor.nil();

            this.pushFollow(PomonaQueryJsParser.FOLLOW_as_expression_in_exp471);
            as_expression3=this.as_expression();

            this.state._fsp--;

            this.adaptor.addChild(root_0, as_expression3.getTree());



            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    as_expression_return: (function() {
        PomonaQueryJsParser.as_expression_return = function(){};
        org.antlr.lang.extend(PomonaQueryJsParser.as_expression_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // PomonaQueryJs.g:74:1: as_expression : lambda_expression ( 'as' lambda_expression )? -> ^( AS_OP ( lambda_expression )+ ) ;
    // $ANTLR start "as_expression"
    as_expression: function() {
        var retval = new PomonaQueryJsParser.as_expression_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var string_literal5 = null;
         var lambda_expression4 = null;
         var lambda_expression6 = null;

        var string_literal5_tree=null;
        var stream_37=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token 37");
        var stream_lambda_expression=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"rule lambda_expression");
        try {
            // PomonaQueryJs.g:75:2: ( lambda_expression ( 'as' lambda_expression )? -> ^( AS_OP ( lambda_expression )+ ) )
            // PomonaQueryJs.g:75:4: lambda_expression ( 'as' lambda_expression )?
            this.pushFollow(PomonaQueryJsParser.FOLLOW_lambda_expression_in_as_expression482);
            lambda_expression4=this.lambda_expression();

            this.state._fsp--;

            stream_lambda_expression.add(lambda_expression4.getTree());
            // PomonaQueryJs.g:75:22: ( 'as' lambda_expression )?
            var alt1=2;
            var LA1_0 = this.input.LA(1);

            if ( (LA1_0==37) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // PomonaQueryJs.g:75:24: 'as' lambda_expression
                    string_literal5=this.match(this.input,37,PomonaQueryJsParser.FOLLOW_37_in_as_expression486);  
                    stream_37.add(string_literal5);

                    this.pushFollow(PomonaQueryJsParser.FOLLOW_lambda_expression_in_as_expression488);
                    lambda_expression6=this.lambda_expression();

                    this.state._fsp--;

                    stream_lambda_expression.add(lambda_expression6.getTree());


                    break;

            }



            // AST REWRITE
            // elements: lambda_expression
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            var stream_retval=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = this.adaptor.nil();
            // 75:50: -> ^( AS_OP ( lambda_expression )+ )
            {
                // PomonaQueryJs.g:75:53: ^( AS_OP ( lambda_expression )+ )
                {
                var root_1 = this.adaptor.nil();
                root_1 = this.adaptor.becomeRoot(this.adaptor.create(AS_OP, "AS_OP"), root_1);

                if ( !(stream_lambda_expression.hasNext()) ) {
                    throw new org.antlr.runtime.tree.RewriteEarlyExitException();
                }
                while ( stream_lambda_expression.hasNext() ) {
                    this.adaptor.addChild(root_1, stream_lambda_expression.nextTree());

                }
                stream_lambda_expression.reset();

                this.adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;


            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    lambda_expression_return: (function() {
        PomonaQueryJsParser.lambda_expression_return = function(){};
        org.antlr.lang.extend(PomonaQueryJsParser.lambda_expression_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // PomonaQueryJs.g:78:1: lambda_expression : or_expression ( ':' or_expression )? -> ^( LAMBDA_OP ( or_expression )+ ) ;
    // $ANTLR start "lambda_expression"
    lambda_expression: function() {
        var retval = new PomonaQueryJsParser.lambda_expression_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var char_literal8 = null;
         var or_expression7 = null;
         var or_expression9 = null;

        var char_literal8_tree=null;
        var stream_38=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token 38");
        var stream_or_expression=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"rule or_expression");
        try {
            // PomonaQueryJs.g:79:2: ( or_expression ( ':' or_expression )? -> ^( LAMBDA_OP ( or_expression )+ ) )
            // PomonaQueryJs.g:79:4: or_expression ( ':' or_expression )?
            this.pushFollow(PomonaQueryJsParser.FOLLOW_or_expression_in_lambda_expression511);
            or_expression7=this.or_expression();

            this.state._fsp--;

            stream_or_expression.add(or_expression7.getTree());
            // PomonaQueryJs.g:79:18: ( ':' or_expression )?
            var alt2=2;
            var LA2_0 = this.input.LA(1);

            if ( (LA2_0==38) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // PomonaQueryJs.g:79:20: ':' or_expression
                    char_literal8=this.match(this.input,38,PomonaQueryJsParser.FOLLOW_38_in_lambda_expression515);  
                    stream_38.add(char_literal8);

                    this.pushFollow(PomonaQueryJsParser.FOLLOW_or_expression_in_lambda_expression517);
                    or_expression9=this.or_expression();

                    this.state._fsp--;

                    stream_or_expression.add(or_expression9.getTree());


                    break;

            }



            // AST REWRITE
            // elements: or_expression
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            var stream_retval=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = this.adaptor.nil();
            // 79:41: -> ^( LAMBDA_OP ( or_expression )+ )
            {
                // PomonaQueryJs.g:79:44: ^( LAMBDA_OP ( or_expression )+ )
                {
                var root_1 = this.adaptor.nil();
                root_1 = this.adaptor.becomeRoot(this.adaptor.create(LAMBDA_OP, "LAMBDA_OP"), root_1);

                if ( !(stream_or_expression.hasNext()) ) {
                    throw new org.antlr.runtime.tree.RewriteEarlyExitException();
                }
                while ( stream_or_expression.hasNext() ) {
                    this.adaptor.addChild(root_1, stream_or_expression.nextTree());

                }
                stream_or_expression.reset();

                this.adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;


            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    or_expression_return: (function() {
        PomonaQueryJsParser.or_expression_return = function(){};
        org.antlr.lang.extend(PomonaQueryJsParser.or_expression_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // PomonaQueryJs.g:82:1: or_expression : and_expression ( 'or' and_expression )* -> ^( OR_OP ( and_expression )+ ) ;
    // $ANTLR start "or_expression"
    or_expression: function() {
        var retval = new PomonaQueryJsParser.or_expression_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var string_literal11 = null;
         var and_expression10 = null;
         var and_expression12 = null;

        var string_literal11_tree=null;
        var stream_39=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token 39");
        var stream_and_expression=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"rule and_expression");
        try {
            // PomonaQueryJs.g:83:2: ( and_expression ( 'or' and_expression )* -> ^( OR_OP ( and_expression )+ ) )
            // PomonaQueryJs.g:83:4: and_expression ( 'or' and_expression )*
            this.pushFollow(PomonaQueryJsParser.FOLLOW_and_expression_in_or_expression540);
            and_expression10=this.and_expression();

            this.state._fsp--;

            stream_and_expression.add(and_expression10.getTree());
            // PomonaQueryJs.g:83:19: ( 'or' and_expression )*
            loop3:
            do {
                var alt3=2;
                var LA3_0 = this.input.LA(1);

                if ( (LA3_0==39) ) {
                    alt3=1;
                }


                switch (alt3) {
                case 1 :
                    // PomonaQueryJs.g:83:21: 'or' and_expression
                    string_literal11=this.match(this.input,39,PomonaQueryJsParser.FOLLOW_39_in_or_expression544);  
                    stream_39.add(string_literal11);

                    this.pushFollow(PomonaQueryJsParser.FOLLOW_and_expression_in_or_expression546);
                    and_expression12=this.and_expression();

                    this.state._fsp--;

                    stream_and_expression.add(and_expression12.getTree());


                    break;

                default :
                    break loop3;
                }
            } while (true);



            // AST REWRITE
            // elements: and_expression
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            var stream_retval=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = this.adaptor.nil();
            // 83:44: -> ^( OR_OP ( and_expression )+ )
            {
                // PomonaQueryJs.g:83:47: ^( OR_OP ( and_expression )+ )
                {
                var root_1 = this.adaptor.nil();
                root_1 = this.adaptor.becomeRoot(this.adaptor.create(OR_OP, "OR_OP"), root_1);

                if ( !(stream_and_expression.hasNext()) ) {
                    throw new org.antlr.runtime.tree.RewriteEarlyExitException();
                }
                while ( stream_and_expression.hasNext() ) {
                    this.adaptor.addChild(root_1, stream_and_expression.nextTree());

                }
                stream_and_expression.reset();

                this.adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;


            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    and_operator_return: (function() {
        PomonaQueryJsParser.and_operator_return = function(){};
        org.antlr.lang.extend(PomonaQueryJsParser.and_operator_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // PomonaQueryJs.g:86:1: and_operator : 'and' ;
    // $ANTLR start "and_operator"
    and_operator: function() {
        var retval = new PomonaQueryJsParser.and_operator_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var string_literal13 = null;

        var string_literal13_tree=null;

        try {
            // PomonaQueryJs.g:87:2: ( 'and' )
            // PomonaQueryJs.g:87:4: 'and'
            root_0 = this.adaptor.nil();

            string_literal13=this.match(this.input,40,PomonaQueryJsParser.FOLLOW_40_in_and_operator569); 
            string_literal13_tree = this.adaptor.create(string_literal13);
            this.adaptor.addChild(root_0, string_literal13_tree);




            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    and_expression_return: (function() {
        PomonaQueryJsParser.and_expression_return = function(){};
        org.antlr.lang.extend(PomonaQueryJsParser.and_expression_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // PomonaQueryJs.g:90:1: and_expression : relational_expr ( and_operator relational_expr )* -> ^( AND_OP ( relational_expr )+ ) ;
    // $ANTLR start "and_expression"
    and_expression: function() {
        var retval = new PomonaQueryJsParser.and_expression_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

         var relational_expr14 = null;
         var and_operator15 = null;
         var relational_expr16 = null;

        var stream_and_operator=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"rule and_operator");
        var stream_relational_expr=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"rule relational_expr");
        try {
            // PomonaQueryJs.g:91:2: ( relational_expr ( and_operator relational_expr )* -> ^( AND_OP ( relational_expr )+ ) )
            // PomonaQueryJs.g:91:4: relational_expr ( and_operator relational_expr )*
            this.pushFollow(PomonaQueryJsParser.FOLLOW_relational_expr_in_and_expression581);
            relational_expr14=this.relational_expr();

            this.state._fsp--;

            stream_relational_expr.add(relational_expr14.getTree());
            // PomonaQueryJs.g:91:20: ( and_operator relational_expr )*
            loop4:
            do {
                var alt4=2;
                var LA4_0 = this.input.LA(1);

                if ( (LA4_0==40) ) {
                    alt4=1;
                }


                switch (alt4) {
                case 1 :
                    // PomonaQueryJs.g:91:22: and_operator relational_expr
                    this.pushFollow(PomonaQueryJsParser.FOLLOW_and_operator_in_and_expression585);
                    and_operator15=this.and_operator();

                    this.state._fsp--;

                    stream_and_operator.add(and_operator15.getTree());
                    this.pushFollow(PomonaQueryJsParser.FOLLOW_relational_expr_in_and_expression587);
                    relational_expr16=this.relational_expr();

                    this.state._fsp--;

                    stream_relational_expr.add(relational_expr16.getTree());


                    break;

                default :
                    break loop4;
                }
            } while (true);



            // AST REWRITE
            // elements: relational_expr
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            var stream_retval=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = this.adaptor.nil();
            // 91:54: -> ^( AND_OP ( relational_expr )+ )
            {
                // PomonaQueryJs.g:91:57: ^( AND_OP ( relational_expr )+ )
                {
                var root_1 = this.adaptor.nil();
                root_1 = this.adaptor.becomeRoot(this.adaptor.create(AND_OP, "AND_OP"), root_1);

                if ( !(stream_relational_expr.hasNext()) ) {
                    throw new org.antlr.runtime.tree.RewriteEarlyExitException();
                }
                while ( stream_relational_expr.hasNext() ) {
                    this.adaptor.addChild(root_1, stream_relational_expr.nextTree());

                }
                stream_relational_expr.reset();

                this.adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;


            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    relational_operator_return: (function() {
        PomonaQueryJsParser.relational_operator_return = function(){};
        org.antlr.lang.extend(PomonaQueryJsParser.relational_operator_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // PomonaQueryJs.g:96:1: relational_operator : ( ( 'gt' | '>' ) -> GT_OP | ( 'lt' | '<' ) -> LT_OP | ( 'eq' | '==' ) -> EQ_OP | ( 'ge' | '>=' ) -> GE_OP | ( 'le' | '<=' ) -> LE_OP | ( 'ne' | '!=' ) -> NE_OP | 'in' -> IN_OP );
    // $ANTLR start "relational_operator"
    relational_operator: function() {
        var retval = new PomonaQueryJsParser.relational_operator_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var string_literal17 = null;
        var char_literal18 = null;
        var string_literal19 = null;
        var char_literal20 = null;
        var string_literal21 = null;
        var string_literal22 = null;
        var string_literal23 = null;
        var string_literal24 = null;
        var string_literal25 = null;
        var string_literal26 = null;
        var string_literal27 = null;
        var string_literal28 = null;
        var string_literal29 = null;

        var string_literal17_tree=null;
        var char_literal18_tree=null;
        var string_literal19_tree=null;
        var char_literal20_tree=null;
        var string_literal21_tree=null;
        var string_literal22_tree=null;
        var string_literal23_tree=null;
        var string_literal24_tree=null;
        var string_literal25_tree=null;
        var string_literal26_tree=null;
        var string_literal27_tree=null;
        var string_literal28_tree=null;
        var string_literal29_tree=null;
        var stream_49=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token 49");
        var stream_48=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token 48");
        var stream_45=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token 45");
        var stream_44=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token 44");
        var stream_47=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token 47");
        var stream_46=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token 46");
        var stream_43=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token 43");
        var stream_42=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token 42");
        var stream_41=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token 41");
        var stream_51=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token 51");
        var stream_52=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token 52");
        var stream_53=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token 53");
        var stream_50=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token 50");

        try {
            // PomonaQueryJs.g:97:2: ( ( 'gt' | '>' ) -> GT_OP | ( 'lt' | '<' ) -> LT_OP | ( 'eq' | '==' ) -> EQ_OP | ( 'ge' | '>=' ) -> GE_OP | ( 'le' | '<=' ) -> LE_OP | ( 'ne' | '!=' ) -> NE_OP | 'in' -> IN_OP )
            var alt11=7;
            switch ( this.input.LA(1) ) {
            case 41:
            case 42:
                alt11=1;
                break;
            case 43:
            case 44:
                alt11=2;
                break;
            case 45:
            case 46:
                alt11=3;
                break;
            case 47:
            case 48:
                alt11=4;
                break;
            case 49:
            case 50:
                alt11=5;
                break;
            case 51:
            case 52:
                alt11=6;
                break;
            case 53:
                alt11=7;
                break;
            default:
                var nvae =
                    new org.antlr.runtime.NoViableAltException("", 11, 0, this.input);

                throw nvae;
            }

            switch (alt11) {
                case 1 :
                    // PomonaQueryJs.g:97:4: ( 'gt' | '>' )
                    // PomonaQueryJs.g:97:4: ( 'gt' | '>' )
                    var alt5=2;
                    var LA5_0 = this.input.LA(1);
